correct chosen syntax for dictionary lookup

--- a/assignment1/assignment1.ipynb
+++ b/assignment1/assignment1.ipynb
@@ -50,7 +50,7 @@
        "output_type": "pyout",
        "prompt_number": 1,
        "text": [
-        "<IPython.core.display.HTML at 0x1047fbf10>"
+        "<IPython.core.display.HTML at 0x1047f4f10>"
        ]
       }
      ],
@@ -98,21 +98,21 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "y did microsoft let fable go to kinect better yet y they make it into the shithole\n",
-        "RT @Josemicod5: Si esto llega a + de 1.000 RT (Lo dudo xD) Sorteo una imagen con 2.100 Microsoft Points, el m\u00e1s r\u00e1pido se los lleva ^^.\n",
-        "The microsoft task macros http://t.co/r3oY1mGSWG\n",
-        "Cool video! What a projector + Kinect camera can do with your living room &amp; gaming experience http://t.co/tnd8xFB2Ru via @studiomuscle\n",
-        "@sarah_bieber14 Je peut pas? Mon p\u00e8re est PDG d'une grande soci\u00e9t\u00e9 associ\u00e9 avec Microsoft, L'UNESCO, L'ONU, La r\u00e9gion PACA et Apple... 1/2\n",
-        "Michel Levy anuncia que deixar\u00e1 o comando da Microsoft no Brasil http://t.co/UXNuAhIzbM\n",
-        "Microsoft's Strategic Blunder with Windows 8 - TIME: Microsoft's Strategic Blunder with Windows 8TIMEIn 1985, ... http://t.co/uWMQRKEXgh\n",
-        "@v5Throttle @TLW1Dan I do think Microsoft needs an analogue to PS+. Especially if they have the gall to charge MMO-levels for subscriptions.\n",
-        "Michel Levy anuncia que deixar\u00e1 o comando da Microsoft no Brasil: Levy est\u00e1 h\u00e1 sete anos no comando da Microso... http://t.co/yfeNYCnNFt\n",
-        "Let @Bryan_Soltis &amp; @VinceMayfield help you put your code in the cloud at #AzureDev Camp- #Miami next week!  #fldev http://t.co/2eSHdz0DEW\n",
-        "Microsoft: Next Xbox will work even when your Internet doesn\u2019t http://t.co/GgXH3Cn9tY\n",
-        "Michel Levy anuncia que deixar\u00e1 o comando da Microsoft no Brasil: Levy est\u00e1 h\u00e1 sete anos no comando da Microso... http://t.co/bnndjkTuAV\n",
-        "Great results, awesome rewards just for searching with Bing. Join @BingRewards!  http://t.co/JUFgziiJK1\n",
-        "Michel Levy anuncia que deixar\u00e1 o comando da Microsoft no Brasil http://t.co/a33Obq1mtZ\n",
-        "Michel Levy anuncia que deixar\u00e1 o comando da Microsoft no Brasil: Levy est\u00e1 h\u00e1 sete anos no comando da Microso... http://t.co/bcbVWHihkC\n"
+        "Walk to Microsoft/Google; Move-in Bonus! Spacious mfd home #165 (mountain view) $2695 3bd: **Status: PENDING**... http://t.co/nBGIttLljw\n",
+        "Microsoft integra Skype dentro http://t.co/eAYx0Vjlwl http://t.co/cbQ5Oyy8ma\n",
+        "Microsoft: Don't expect a Windows 8 iTunes app soon:  http://t.co/EJWMqUk8Hl #Technology\n",
+        "VR-Zone | Technology News | Products Reviews http://t.co/z1oxZtVAV5 v\u00eda @VRZone\n",
+        "RT @MicrosoftAjuda: Voc\u00ea tem perguntas sobre sua #ContaMicrosoft (http://t.co/jvDMQPKevb)? Fa\u00e7a sua pergunta no nosso f\u00f3rum! http://t.co/hr3tPEsDZL\n",
+        "RT @whymicrosoft: Microsoft to grow #Office365\u2019s capacity to import contacts from 3rd party tools: http://t.co/zdUNv6naBE\n",
+        "@EastonRoyce Microsoft releases new YouTube app for Windows Phone 8 http://t.co/QUlkZjFZQa\n",
+        "RT @dens: Oh hello there, sexy new @Foursquare app for Windows Phone 8!  http://t.co/WrZTR6vuqQ \u2026  (ps:  pre-installed on new Nokia Lumias :)\n",
+        "@EastonRoyce Microsoft returns to Gamescom in August 2013 for next Xbox http://t.co/PAcoLfdNVy\n",
+        "Antes da Surface a Microsoft falava que o ruim do iPad era que ele n\u00e3o consegui produzir conte\u00fado e agora \u00e9 a falta de teclado f\u00edsico hahah\n",
+        "BTW @nettechjax has a wonderful Helpdesk. @pcmag just called the Surface @Microsoft top products of 2013.\n",
+        "@EastonRoyce Microsoft releases new YouTube app for Windows Phone 8 http://t.co/6CUsP3gy01\n",
+        "The intergalactic bounty hunter Lobo is now available on the Xbox Live Marketplace for 400 Microsoft Points or... http://t.co/oVB98I6dho\n",
+        "@EastonRoyce Microsoft returns to Gamescom in August 2013 for next Xbox http://t.co/l8yMgLACNv\n",
+        "NEW MICROSOFT EXCEL STICKER FOR KEYBOARD: The MicrosoftTM Excel keyboard stickers can easily transform your st... http://t.co/54VNORl3Ak\n"
        ]
       }
      ],
@@ -181,7 +181,7 @@
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -249,7 +249,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "words = [x.split() for x in sentiment.keys()]\n",
+      "words = [x.split() for x in sentiment]\n",
       "keylen = np.array([len(x) for x in words])"
      ],
      "language": "python",
@@ -328,7 +328,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "1 in [c in x for x in sentiment.keys() for c in '.,?!']"
+      "1 in [c in x for x in sentiment for c in '.,?!']"
      ],
      "language": "python",
      "metadata": {},
@@ -392,7 +392,7 @@
       "                for x in myNgrams:\n",
       "                    words.append(' '.join(x))\n",
       "\n",
-      "            print float( sum([sentiment[x] if x in sentiment.keys() else 0 for x in words]) )\n",
+      "            print float( sum([sentiment[x] if x in sentiment else 0 for x in words]) )\n",
       "            \n",
       "        except:\n",
       "            pass"
@@ -409,14 +409,7 @@
         "-3.0\n",
         "0.0\n",
         "0.0\n",
-        "4.0"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "4.0\n",
         "0.0\n",
         "0.0\n",
         "0.0\n",
@@ -424,25 +417,11 @@
         "0.0\n",
         "-2.0\n",
         "0.0\n",
-        "3.0"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "3.0\n",
         "-3.0\n",
         "2.0\n",
         "-4.0\n",
-        "0.0"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "0.0\n",
         "2.0\n"
        ]
       }
@@ -483,7 +462,7 @@
       "            score = 0\n",
       "            unk = []\n",
       "            for x in words:\n",
-      "                if x in sentiment.keys():\n",
+      "                if x in sentiment:\n",
       "                    score += sentiment[x]\n",
       "                else:\n",
       "                    unk.append(x)\n",
@@ -592,14 +571,7 @@
         "fatty -2.000\n",
         "14saik14 0.000\n",
         "' 0.000\n",
-        "rt 3.000"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "rt 3.000\n",
         "myidolovesme 3.000\n",
         "l'evoluzione 3.000\n",
         "dei 3.000\n",
@@ -890,7 +862,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 14
     },
     {
      "cell_type": "heading",
@@ -954,7 +926,7 @@
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 15
     },
     {
      "cell_type": "heading",
@@ -1011,7 +983,7 @@
        ]
       }
      ],
-     "prompt_number": 70
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
